<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="8dp"
	android:background="@android:color/white">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<TextView
			android:id="@+id/about"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:textColor="@android:color/black"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/app_name" android:gravity="center_horizontal" android:textStyle="bold"/>
		<ImageView android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/imageView1" android:layout_gravity="center_horizontal"></ImageView>
		
		<TextView 
			android:id="@+id/textView1" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textColor="@android:color/black"
			android:text="@string/version" android:layout_marginTop="20dip" android:layout_marginBottom="10dip"/>
		
		<TextView 
			android:id="@+id/textView1" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textColor="@android:color/black"
			android:text="@string/developed_by" android:layout_marginBottom="10dip"/>
			
		<TextView 
			android:id="@+id/textView1" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textColor="@android:color/black"
			android:text="@string/moreinfo" android:autoLink="web"/>
		

	</LinearLayout>

</ScrollView>